@@ -23,6 +23,8 @@ V1.1.5 Friday, May 17 2013
  +Added Restore Empty option in preferences, and added -v/--version option.
  +Fixed bug 89, odd behaviour with gnome-terminal search. 
  +Fixed bug 91, gnome-terminal and deselect bug (again).
+ +Fixed bug 96, entries with lots of tabs too wide/feature-request, alternate non-printing display.
+ +Added debug_update preference.
 
  
 V1.1.4 Saturday, January 19 2013
